--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Ticketac</title>
+    <title>Ticket Train</title>
 </head>
 <body>
 
@@ -16,16 +16,16 @@
         <a class="navbar-brand" href="#">
             <img src="/images/train.png" width="30" height="30" alt="">
         </a>        
-        <a class="navbar-brand" href="#">Ticketac</a>
+        <a class="navbar-brand" href="#">Ticket Train</a>
 
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
             </ul>
             <span class="navbar-text">
-                <a class="nav-link" href="/" style='color:#c82333; font-weight: bold;;'> Log out</a>
+                <a class="nav-link" href="/" style='color:#c82333; font-weight: bold;;'> Déconnexion</a>
             </span>
             <span class="navbar-text">
-                <a class="nav-link" href="/myLastTrips">My last trips</a>
+                <a class="nav-link" href="/myLastTrips">Mes voyages</a>
             </span>
         </div>
 
@@ -36,18 +36,18 @@
     <div class="home">
 
         <!-- Test title -->
-        <h3 class="homeTitle">One-way ticket : </h3>
+        <h3 class="homeTitle"> Rechercher un trajet : </h3>
 
         <!-- Input Field -->
         <div class="inputField">
             <form class="form-inline" action="/journeys" method="POST">
 
                 <div class="form-group">
-                    <input name="departureCity" type="text" class="form-control" id="inputPassword2" placeholder="From: Paris, Marseille..." required>
+                    <input name="departureCity" type="text" class="form-control" id="inputPassword2" placeholder="Départ : Paris, Marseille..." required>
                 </div>
                     
                 <div class="form-group mx-sm-3">
-                    <input name="arrivalCity" type="text" class="form-control" id="inputPassword2" placeholder="To: Lille, Nantes... " required>
+                    <input name="arrivalCity" type="text" class="form-control" id="inputPassword2" placeholder="Arrivée : Lille, Nantes... " required>
                 </div>
 
                 <div class="form-group ">
