--- a/views/myTickets.ejs
+++ b/views/myTickets.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Ticketac</title>
+    <title>Ticket Train</title>
 </head>
 <body>
 
@@ -16,16 +16,16 @@
         <a class="navbar-brand" href="/index">
             <img src="/images/train.png" width="30" height="30" alt="">
         </a>        
-        <a class="navbar-brand" href="/index">Ticketac</a>
+        <a class="navbar-brand" href="/index">Ticket Train</a>
 
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
             </ul>
             <span class="navbar-text">
-                <a class="nav-link" href="/" style='color:#c82333; font-weight: bold;;'> Log out</a>
+                <a class="nav-link" href="/" style='color:#c82333; font-weight: bold;;'> Déconnexion</a>
             </span>
             <span class="navbar-text">
-                    <a class="nav-link" href="/myLastTrips">My last trips</a>
+                    <a class="nav-link" href="/myLastTrips">Mes voyages</a>
             </span>
         </div>
 
@@ -45,10 +45,10 @@
             <thead>
                 <tr>
                 <th scope="col">N°</th>
-                <th scope="col">Journey</th>
+                <th scope="col">Voyages</th>
                 <th scope="col">Date</th>
-                <th scope="col">Departure time</th>
-                <th scope="col">Price</th>
+                <th scope="col">Heure de départ</th>
+                <th scope="col">Prix</th>
                 </tr>
             </thead>
             <tbody>
@@ -68,7 +68,7 @@
                 <th scope="row"> <%= Number %> </th>
                 <td> <%= myTickets[i].ticketDeparture %> / <%=myTickets[i].ticketArrival %></td>
                 <td> <%= myTickets[i].ticketDate %> </td>
-                <td> <%= myTickets[i].ticketDepartureTime %> pm</td>
+                <td> <%= myTickets[i].ticketDepartureTime %> h</td>
                 <td> <%= myTickets[i].ticketPrice %> €</td>
                 </tr>
 
@@ -84,7 +84,7 @@
         </div>
 
         <div style="margin-left:80%;">
-            <a href="/confirmReservation" class="btn btn-danger">Confirm</a>
+            <a href="/confirmReservation" class="btn btn-danger">Confirmer</a>
         </div>
         
     
