--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Ticketac</title>
+    <title>Ticket Train</title>
 </head>
 <body>
 
@@ -16,16 +16,16 @@
         <a class="navbar-brand" href="/index">
             <img src="/images/train.png" width="30" height="30" alt="">
         </a>        
-        <a class="navbar-brand" href="/index">Ticketac</a>
+        <a class="navbar-brand" href="/index">Ticket Train</a>
 
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
             </ul>
             <span class="navbar-text">
-                <a class="nav-link" href="/" style='color:#c82333; font-weight: bold;;'> Log out</a>
+                <a class="nav-link" href="/" style='color:#c82333; font-weight: bold;;'> Déconnexion</a>
             </span>
             <span class="navbar-text">
-                    <a class="nav-link" href="/myLastTrips">My last trips</a>
+                    <a class="nav-link" href="/myLastTrips">Mes voyages</a>
             </span>
         </div>
 
@@ -44,13 +44,13 @@
             <div class="form-group inputResume">
 
                 <!-- <label for="staticEmail" class="form-label" style="color: white; margin-right: 10px;">Name</label> -->
-                <input type="text" class="form-control " id="inputPassword" placeholder="Name">  
+                <input type="text" class="form-control " id="inputPassword" placeholder="Nom">  
                 
             </div>
             <div class="form-group inputResume">
                <!-- <label for="staticEmail" class="form-label" style="color: white; margin-right: 10px;">FirstName</label> -->
             
-                <input type="text" class="form-control" id="inputPassword" placeholder="FirstName">
+                <input type="text" class="form-control" id="inputPassword" placeholder="Prénom">
               
             </div>
 
@@ -61,7 +61,7 @@
               
             </div>
 
-            <a class="btn btn-danger" href="#" role="button">Confirm</a>
+            <a class="btn btn-danger" href="#" role="button">Valider</a>
 
             </form>
 
