--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,11 +29,11 @@
                 <h3 class="logIn">Connection : </h3>
 
                 <div class="form-group inputResume">
-                    <input name="signInName" type="text" class="form-control" id="inputPassword" placeholder="Nom">
+                    <input name="signInName" type="text" class="form-control" id="inputPassword" placeholder="Nom : Invite">
                 </div>
 
                 <div class="form-group inputResume">
-                    <input name="signInEmail" type="email" class="form-control" id="inputPassword" placeholder="Email">
+                    <input name="signInEmail" type="email" class="form-control" id="inputPassword" placeholder="Email : Invite@gmail.com">
                 </div>
 
                 <button type="submit" class="btn btn-danger">Valider</button>
