--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,14 +26,14 @@
             <form style="text-align: center;margin: 50px;" action="/sign-in" method="POST"> 
 
                 <!-- Login title -->
-                <h3 class="logIn">Connection : </h3>
+                <h3 class="logIn">Se connecter : </h3>
 
                 <div class="form-group inputResume">
-                    <input name="signInName" type="text" class="form-control" id="inputPassword" placeholder="Nom : Invite">
+                    <input name="signInName" type="text" class="form-control" id="inputPassword" placeholder="Invite">
                 </div>
 
                 <div class="form-group inputResume">
-                    <input name="signInEmail" type="email" class="form-control" id="inputPassword" placeholder="Email : Invite@gmail.com">
+                    <input name="signInEmail" type="email" class="form-control" id="inputPassword" placeholder="Invite@gmail.com">
                 </div>
 
                 <button type="submit" class="btn btn-danger">Valider</button>
