--- a/views/myLastTrips.ejs
+++ b/views/myLastTrips.ejs
@@ -59,7 +59,7 @@
                 <tr>
                 <td><%= dateFormat(historicTravel[i].date) %> </td>
                 <td><%= historicTravel[i].departure %> / <%= historicTravel[i].arrival %></td>
-                <td><%= historicTravel[i].departureTime %> pm</td>
+                <td><%= historicTravel[i].departureTime %> h</td>
                 <td><%= historicTravel[i].price %> €</td>
                 </tr>
 
